--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                     <nav>
                         <ul class="menu">
                             <li><a href="">Home</a></li>
-                            <li><a href="">Products</a></li>
+                            <li class="dropdown">
+                                <a href="">Products</a>
+                                <i class="fa-solid fa-chevron-down fa-2xs icon-down" style="font-size: 9px;"></i>
+                            </li>
                             <li><a href="">Payment</a></li>
                             <li><a href="">Shipping</a></li>
                         </ul>
@@ -40,7 +43,7 @@
                                 <button></button>
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-3 start-end">
                             <div class="cart">
                                 <div class="products-count">4</div>
                             </div>
@@ -53,5 +56,6 @@
     <main class="main">Main</main>
     <footer class="footer">Footer</footer>
 
+    <script src="https://kit.fontawesome.com/39283d0d53.js" crossorigin="anonymous"></script>
 </body>
 </html>
