--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
                             <li class="dropdown">
                                 <a href="">Products</a>
                                 <i class="fa-solid fa-chevron-down fa-2xs icon-down" style="font-size: 9px;"></i>
+                                <ul class="submenu">
+                                    <li>Lorem ipsum dolor</li>
+                                    <li>Sit amet</li>
+                                    <li>Consectetur adipisicing</li>
+                                    <li>Tempor incididunt</li>
+                                    <li>Dolore magna aliqua</li>
+                                    <li>Ut enim ad minim veniam</li>
+                                    <li>Quis nostrud</li>
+                                </ul>
                             </li>
                             <li><a href="">Payment</a></li>
                             <li><a href="">Shipping</a></li>
@@ -43,7 +52,7 @@
                                 <button></button>
                             </div>
                         </div>
-                        <div class="col-3 start-end">
+                        <div class="col-3">
                             <div class="cart">
                                 <div class="products-count">4</div>
                             </div>
