--- a/index.html
+++ b/index.html
@@ -417,7 +417,13 @@
             </div>
         </div>
     </main>
-    <footer class="footer">Footer</footer>
+    <footer class="footer">
+        <div class="container">
+            <div class="row footer-block">
+                <div class="col-2 footer-block_item"><p>&copy; Copyright 2017</p></div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://kit.fontawesome.com/39283d0d53.js" crossorigin="anonymous"></script>
 </body>
